syntax = "proto3";
package cosmatics;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/refractedlabs/cosmatics/types";


message SyncState {
  int64 block_height = 1;
  google.protobuf.Timestamp block_time = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

message SyncStatistics {
  uint64 total_blocks = 1;
  uint64 avg_sync_delay_seconds = 2;
  uint64 avg_indexer_block_time_seconds = 3;
  float avg_indexer_blocks_per_second = 4;
}